@@ -1,0 +1,40 @@
+<html>
+<head>
+<script src="resources/profiler-test-JS-resources.js"></script>
+<script>
+
+function startTest()
+{
+    startProfiling();
+}
+
+function startProfiling()
+{
+    console.profile("Profiling From A Nested Location");
+
+    for (var i = 0; i < 1000000; i++)
+        var b = i + 2;
+    
+    setTimeout("endProfile()", 20);
+}
+
+function endProfile()
+{
+    for (var i = 0; i < 1000000; i++)
+        var b = i + 2;
+
+    console.profileEnd("Profiling From A Nested Location");
+}
+
+</script>
+</head>
+
+<body onload="startTest()">
+This page's JavaScript starts profiling from within a nested location.
+<br>
+<br>
+To use this test, load it in the browser then load the WebInspector and look at
+the profile.  In the profile there should be a call to functionWichStartsAndStopsTheProfiler().
+<div id="output"></div>
+</body>
+</html>
